# Cucumber

./: README.md  main.py  pyproject.toml
dashboard/: README.md  app.py  requirements.txt
data/input/: yield_data.xlsx
results/: simulation_20250401_225308_summary.json
src/: __init__.py
src/configs/: __init__.py  constants.py  params.py
src/environment/: __init__.py  climate.py
src/management/: __init__.py  harvest.py  leaf_removal.py
src/processes/: __init__.py
src/processes/morphology/: __init__.py  leaf_area.py
src/processes/phenology/: flowering.py
src/processes/physiology/: __init__.py  photosynthesis.py
src/system/: __init__.py  canopy.py
src/utils/: function.py  storage.py
