[tool.poetry]
name = "cucumber_growth_model"
version = "1.0.0"
description = "Cucumber growth model with photosynthesis simulation"
readme = "README.md"
authors = ["PHL <example@email.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = ">=1.3.0"
numpy = ">=1.20.0"
matplotlib = ">=3.4.0"
openpyxl = ">=3.0.0"
h5py = ">=3.6.0"
zipfile36 = ">=0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100 